Added task change state
